force-app/main/default/objects/Demo_Request_Opportunity__c/Demo_Request_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Demo Request Opportunity</label>
    <nameField>
        <displayFormat>DR-{000000000}</displayFormat>
        <label>Demo Request Opportunity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demo Request Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>