force-app/main/default/objects/Demo_Request_Opportunity__c/fields/Demo_Build__c.field-meta.xml
<CustomField>
    <fullName>Demo_Build__c</fullName>
    <label>Demo Build</label>
    <referenceTo>Demo_Build__c</referenceTo>
    <relationshipLabel>Demo Request Opportunities</relationshipLabel>
    <relationshipName>Demo_Request_Opportunities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>