force-app/main/default/objects/Demo_Request_Opportunity__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related Demo Builds</relationshipLabel>
    <relationshipName>Demo_Request_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>