force-app/main/default/objects/Demo_Request_Opportunity__c/fields/Related_PLR__c.field-meta.xml
<CustomField>
    <fullName>Related_PLR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related PLR</label>
    <referenceTo>Pursuit_Lead_Request__c</referenceTo>
    <relationshipLabel>Related Demo Builds</relationshipLabel>
    <relationshipName>Demo_Request_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>